Fixed text-align on desktop

--- a/app/scss/_card.scss
+++ b/app/scss/_card.scss
@@ -48,6 +48,10 @@
       font-size: 2rem;
       text-align: center;
       margin-bottom: 2.4375rem;
+
+      @include breakpoint-up {
+         text-align: left;
+      }
    }
 
    &__item {
